Fix Spacing

--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ margin: 30px;
     padding: 10px auto;
       transition-duration: 0.4s;
     background-color: green;
-    margin: 10px 3px 3px 10px;
+    margin: 10px 3px 10px 3px;
     border-radius: 4px;
     text-decoration: none;
     }
